Align CSS hsl() -> rgb() color conversion with the spec https://bugs.webkit.org/show_bug.cgi?id=203592

Reviewed by Tim Horton.
LayoutTests/imported/w3c:

Fix lots of tests in css/css-color/color-resolving-hsl.html by matching the specified rounding
when converting between hsl() and rgb().

Remove some duplicated code, and call HSLToSRGB().

* web-platform-tests/css/css-color/color-resolving-expected.txt:
* web-platform-tests/css/css-color/color-resolving-hsl-expected.txt:
* web-platform-tests/css/css-color/parsing/color-computed-expected.txt:
* web-platform-tests/css/css-color/parsing/color-valid-expected.txt:

Source/WebCore:

Fix lots of tests in css/css-color/color-resolving-hsl.html by matching the specified rounding
when converting between hsl() and rgb().

Remove some duplicated code, and call HSLToSRGB().

Tested by WPT.

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::parseHSLParameters):
* platform/graphics/Color.cpp:
(WebCore::makeRGBAFromHSLA):
(WebCore::calcHue): Deleted.
* platform/graphics/Color.h:

LayoutTests:

* platform/mac/fast/css/hsl-color-expected.txt:
* platform/mac/fast/css/hsla-color-expected.txt:

Canonical link: https://commits.webkit.org/216963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251750 268f45cc-cd09-0410-ab3c-d52691b4dbfc